# stag-archive

./: CMakeLists.txt  install.sh
include/stag/: Drawer.h  EDInterface.h  OpenCVConstants.h  Stag.h
include/stag/ED/: EDLines.h  EdgeMap.h  NFA.h  Utilities.h
src/: Decoder.cpp  Drawer.cpp  EDInterface.cpp  Ellipse.cpp  Marker.cpp  PoseRefiner.cpp  Quad.cpp  QuadDetector.cpp  Stag.cpp  main.cpp  utility.cpp
src/ED/: ED.cpp  EDInternals.cpp  EDLines.cpp  GradientOperators.cpp  ImageSmooth.cpp  LineSegment.cpp  MyMath.cpp  NFA.cpp  Utilities.cpp  ValidateEdgeSegments.cpp
